<resources>
    <string name="app_name">Qwilly</string>
    <string name="login">  &#032; LOGIN &#032; </string>
    <string name="signup">SIGN UP</string>
    <string name="hint_mobile_no">Mobile No.</string>
    <string name="hint_password">Password</string>
    <string name="forget_password_text">FORGOT PASSWORD?</string>
    <string name="or">OR</string>
    <string name="facebook">facebook</string>
    <string name="google">google</string>
    <string name="hint_name">Name</string>
    <string name="btn_register">REGISTER</string>
    <string name="title_activity_home">Home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
</resources>
