<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context="com.avalance.qwilly.Registration">

    <com.avalance.qwilly.Text.QwillyText
        android:id="@+id/imageView"
        android:padding="10dp"
        android:textColor="#e31c15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Display3"
        android:text="@string/app_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.050000012" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintVertical_bias="0.048"
        android:id="@+id/layout_login"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

        <com.avalance.qwilly.Text.MediumText
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:gravity="center"
            android:rotation="+90"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Button"
            android:textColor="#e31c15"
            android:text="@string/login" />

        <LinearLayout
            android:layout_width="5dp"
            android:layout_height="match_parent"
            android:background="#e31c15"

            android:orientation="horizontal"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_login"
        app:layout_constraintVertical_bias="0.0">

        <com.avalance.qwilly.Text.MediumText
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:gravity="center"
            android:rotation="+90"
            android:text="@string/signup"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Button"
            android:textColor="#b8b8b8" />

        <LinearLayout
            android:layout_width="5dp"
            android:layout_height="match_parent"
            android:background="#e31c15"
            android:orientation="horizontal"
            android:visibility="invisible" />

    </LinearLayout>

    <EditText
        android:id="@+id/et_lmobile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingBottom="15dp"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Light.Widget.PopupMenu.Small"
        android:drawablePadding="20dp"
        android:drawingCacheQuality="auto"
        android:inputType="phone"
        android:hint="@string/hint_mobile_no"
        android:drawableLeft="@drawable/user"
        android:textColor="#b8b8b8"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="48dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="48dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.095"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        tools:ignore="RtlHardcoded" />

    <EditText
        android:id="@+id/et_lpass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:paddingBottom="15dp"
        android:drawableStart="@drawable/password"
        android:drawablePadding="20dp"
        android:drawingCacheQuality="auto"
        android:inputType="textPassword"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Light.Widget.PopupMenu.Small"
        android:hint="@string/hint_password"
        android:textColor="#b8b8b8"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="48dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="48dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:drawableLeft="@drawable/password"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/et_lmobile"
        app:layout_constraintVertical_bias="0.022" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:text="@string/login"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="@drawable/btn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/et_lpass"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.054"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp" />

    <TextView
        android:id="@+id/txt_forgotpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_password_text"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Light.Widget.PopupMenu.Small"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@+id/btn_login"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.067" />

    <LinearLayout
        android:layout_width="344dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:gravity="center"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/txt_forgotpass"
        android:layout_marginRight="32dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintVertical_bias="0.059"
        android:id="@+id/linearLayout2">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="#b8b8b8"
            android:layout_marginLeft="20dp"
            android:orientation="horizontal"
            android:layout_weight="0.4">


        </LinearLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="12sp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Light.Widget.PopupMenu.Small"
            android:layout_weight="0.2"
            android:text="@string/or" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="#b8b8b8"
            android:layout_marginRight="20dp"
            android:orientation="horizontal"
            android:layout_weight="0.4"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.06999999">

        <ImageView
            android:id="@+id/img_fb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/fb"
            android:contentDescription="@string/facebook" />

        <ImageView
            android:id="@+id/img_google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            app:srcCompat="@drawable/gplus"
            android:contentDescription="@string/google" />

    </LinearLayout>



</android.support.constraint.ConstraintLayout>
